@@ -108,7 +108,7 @@ public class DnaSequenceUseCaseTest {
         Specie specie1 = Specie.builder().dna("dna1").species("human").build();
         Specie specie2 = Specie.builder().dna("dna2").species("mutant").build();
         Specie specie3 = Specie.builder().dna("dna3").species("mutant").build();
-        return List.of(specie1, specie2, specie3);
+        return Arrays.asList(specie1,specie2,specie3);
     }
 
 }
